# fundpublicgoods

./: .env.template  .gitignore  README.md  example-strategy.json  fund-public-good-ai.code-workspace  notes  package-lock.json  package.json  semantics  todo
ops/: models.py  pyproject.toml
ops/scripts/: generate_types.py
researcher/: .gitignore  pyproject.toml
researcher/project_data/: 10:0x8e1bD5Da87C14dd8e08F7ecc2aBf9D1d558ea174:0.json  10:0x8e1bD5Da87C14dd8e08F7ecc2aBf9D1d558ea174:104.json  10:0x8e1bD5Da87C14dd8e08F7ecc2aBf9D1d558ea174:1356.json  10:0x8e1bD5Da87C14dd8e08F7ecc2aBf9D1d558ea174:1728.json  10:0x8e1bD5Da87C14dd8e08F7ecc2aBf9D1d558ea174:1729.json  10:0x8e1bD5Da87C14dd8e08F7ecc2aBf9D1d558ea174:1730.json  10:0x8e1bD5Da87C14dd8e08F7ecc2aBf9D1d558ea174:1731.json  10:0x8e1bD5Da87C14dd8e08F7ecc2aBf9D1d558ea174:1732.json  10:0x8e1bD5Da87C14dd8e08F7ecc2aBf9D1d558ea174:1733.json  10:0x8e1bD5Da87C14dd8e08F7ecc2aBf9D1d558ea174:226.json  10:0x8e1bD5Da87C14dd8e08F7ecc2aBf9D1d558ea174:24.json  10:0x8e1bD5Da87C14dd8e08F7ecc2aBf9D1d558ea174:611.json  10:0x8e1bD5Da87C14dd8e08F7ecc2aBf9D1d558ea174:719.json  10:0x8e1bD5Da87C14dd8e08F7ecc2aBf9D1d558ea174:779.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:0.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:1.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:104.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:116.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:118.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:122.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:136.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:145.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:184.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:186.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:190.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:192.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:193.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:195.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:196.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:197.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:198.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:200.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:202.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:203.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:204.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:206.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:208.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:209.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:210.json  137:0x5C5E2D94b107C7691B08E43169fDe76EAAB6D48b:211.json  (+35 more)
researcher/researcher/: main.py
researcher/researcher/functions/: evaluate_projects.py
researcher/researcher/models/: answer.py  evaluated_project.py  project.py  project_evaluation.py
workers/: Dockerfile  package.json  pyproject.toml  serverless.dev.yml  serverless.local.yml
workers/fund_public_goods/: build_check.py  categorize_projects.py  create_embeddings.py  create_plan.py  events.py  generate_categories.py  generate_labels.py  get_version.py  inngest_client.py  main.py  start_worker.py  test_weights.py  trigger_research.py  upload_pinecone.py
workers/fund_public_goods/api/: funding_entries.py  run.py  runs.py  workers.py
workers/fund_public_goods/db/: __init__.py  app_db.py  client.py  entities.py  (+2 more)
(+221 files in other folders)
