[tool.poetry]
name = "fund_public_goods"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.10.6"
fastapi = "0.108.0"
inngest = "0.2.3"
pydantic = "^2.1.1"
python-dotenv = "^1.0.0"
uvicorn = "^0.25.0"
supabase = "2.3.1"
mangum = "0.17.0"
requests = "^2.31.0"
langchain = "^0.1.1"
langchain-openai = "^0.0.2.post1"
chromadb = "^0.4.22"
langchain-community = "^0.0.13"

[tool.poetry.group.dev.dependencies]
mypy = "1.8.0"
types-requests = "^2.31.0.20240106"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = false
plugins = [
  "pydantic.mypy"
]

[tool.poetry.scripts]
build-check = "fund_public_goods.build_check:run"
generate-types = "fund_public_goods.generate_types:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"